--- a/NexTransfer/src/main/webapp/index.html
+++ b/NexTransfer/src/main/webapp/index.html
@@ -1,142 +1,218 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>NexTransfer - Home</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>NexTransfer</title>
+	<meta name="description" content="NexTransfer">
+	<meta name="author" content="wJk / hoyah217@gmail.com">
+	<meta name="copyright" content="NexTransfer">
+	<meta name="keyword" content="currency, ">
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0,minimal-ui">
+	<!--[if lt IE 9]>
+	<script src="js/css3-mediaqueries.js"></script>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 
-<script type="text/javascript" charset="utf-8">
-	document.addEventListener('DOMContentLoaded', function () {
-		var menuCapture = document.getElementById("navhidden").innerHTML;
-		document.getElementById("nav").innerHTML = document.getElementById("navhidden").innerHTML;
-	});
-</script>
-
-
-<link rel="stylesheet" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" type="text/css" /><link rel='stylesheet' type='text/css' href='http://cdn1.editmysite.com/editor/libraries/fancybox/fancybox.css?1234' />
-<link rel='stylesheet' type='text/css' href='files/main_style.css?1421902587' title='wsite-theme-css' />
-<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
-<link href='http://fonts.googleapis.com/css?family=Rochester&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
-<link href='http://fonts.googleapis.com/css?family=Advent+Pro:400,300,200,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
-<style type='text/css'>
-.wsite-elements.wsite-not-footer div.paragraph, .wsite-elements.wsite-not-footer p, .wsite-elements.wsite-not-footer .product-block .product-title, .wsite-elements.wsite-not-footer .product-description, .wsite-elements.wsite-not-footer .wsite-form-field label, .wsite-elements.wsite-not-footer .wsite-form-field label, #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-#wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {}
-.wsite-elements.wsite-footer div.paragraph, .wsite-elements.wsite-footer p, .wsite-elements.wsite-footer .product-block .product-title, .wsite-elements.wsite-footer .product-description, .wsite-elements.wsite-footer .wsite-form-field label, .wsite-elements.wsite-footer .wsite-form-field label{}
-.wsite-elements.wsite-not-footer h2, .wsite-elements.wsite-not-footer .product-long .product-title, .wsite-elements.wsite-not-footer .product-large .product-title, .wsite-elements.wsite-not-footer .product-small .product-title, #wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-#wsite-content h2, #wsite-content .product-long .product-title, #wsite-content .product-large .product-title, #wsite-content .product-small .product-title, .blog-sidebar h2 {}
-.wsite-elements.wsite-footer h2, .wsite-elements.wsite-footer .product-long .product-title, .wsite-elements.wsite-footer .product-large .product-title, .wsite-elements.wsite-footer .product-small .product-title{}
-#wsite-title {font-family:"Advent Pro" !important;font-size:40px !important;color:#b9ebfb !important;}
-.wsite-menu-default a {}
-.wsite-menu a {}
-.wsite-image div, .wsite-caption {}
-.galleryCaptionInnerText {}
-.fancybox-title {}
-.wslide-caption-text {}
-.wsite-phone {}
-.wsite-headline {}
-.wsite-headline-paragraph {}
-.wsite-button-inner {}
-.wsite-not-footer blockquote, #wsite-com-product-tab blockquote {}
-.wsite-footer blockquote {}
-.blog-header h2 a {}
-#wsite-content h2.wsite-product-title {}
-.wsite-product .wsite-product-price a {}
-</style>
-
-<script><!--
-var STATIC_BASE = '//cdn1.editmysite.com/';
-var STYLE_PREFIX = 'wsite';
-//-->
-</script>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-<script src='http://cdn2.editmysite.com/js/site/main.js?buildTime=1234'></script>
-<script>_W.relinquish && _W.relinquish()</script>
-<script type='text/javascript'><!--
-var IS_ARCHIVE=1;
-(function(jQuery){
-function initFlyouts(){initPublishedFlyoutMenus([{"id":"249638904315923178","title":"Home","url":"index.html","target":""},{"id":"198398677449607670","title":"Why NexTransfer","url":"why-nextransfer.html","target":""},{"id":"975956319994625659","title":"Who We Are","url":"who-we-are.html","target":""},{"id":"933269946166021505","title":"Join us","url":"join-us.html","target":""}],"249638904315923178","<li><a href=\"#\" data-membership-required=\"\" >{{title}}<\/a><\/li>",'active',false)}
-if (jQuery) {
-jQuery(document).ready(function() { jQuery(initFlyouts); });
-}else{
-if (Prototype.Browser.IE) window.onload = initFlyouts;
-else document.observe('dom:loaded', initFlyouts);
-}
-})(window._W && _W.jQuery)
-//-->
-</script>
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/bigvideo.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/demo.css" /> -->
+	<link rel="stylesheet" type="text/css" href="css/cs-select.css" />
+	<link rel="stylesheet" type="text/css" href="css/cs-skin-elastic.css" />
+	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+	<script src="js/modernizr-2.5.3.min.js"></script>
+	<script src="js/jquery-1.8.3.min.js"></script>
+	<script src="js/jquery-ui-1.8.22.custom.min.js"></script>
+    <!-- BigVideo -->
+    <script src="js/jquery.imagesloaded.min.js"></script>
+    <script src="http://vjs.zencdn.net/c/video.js"></script>
+    <script src="js/bigvideo.js"></script>
+	<script src="js/common.js"></script>
 </head>
-<body class='landing-page  wsite-theme-dark wsite-page-index'>
-<div class="page-container">
-	<input type="checkbox" id="nav-trigger" class="nav-trigger" >
-	<div class="page-sidebar-wrapper">
-    	<div class="page-sidebar">
-				<div id="close-nav"><label for="nav-trigger"></label></div>
-				<div id="navhidden" class="nav"><ul class='wsite-menu-default'><li id="active"><a href="index.html">Home</a></li><li id='pg198398677449607670'><a href="why-nextransfer.html" data-membership-required="0" >Why NexTransfer</a></li><li id='pg975956319994625659'><a href="who-we-are.html" data-membership-required="0" >Who We Are</a></li><li id='pg933269946166021505'><a href="join-us.html" data-membership-required="0" >Join us</a></li></ul></div>
-				<div id="nav" class="nav"></div>
-				<div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
-<span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-facebook' href='https://www.facebook.com/groups/1510283835908405/' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:info@nextransfer.net' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
-<div style="height:0px;overflow:hidden"></div></div></div>
+<body>
+	<header>
+		<div class="logo"><a href="#">NexTransfer</a></div>
+		<div class="lnb">
+			<ul>
+				<li><a href="#">LOGIN</a></li>
+				<li><button>Find Your Match</button></li>
+			</ul>
 		</div>
-    </div><!-- end page-sidebar-wrapper -->
-		<div class="page-content-wrapper">
-    	<div class="page-content">
-				<div id="header-banner" class="wsite-background">
-				<div id="header-banner-wrap">
-					<div id="header-wrap">
-					    <div class="container-box">
-					        <table id="header">
-					            <tr>
-					                <td id="logo"><span class='wsite-logo'><a href='index.html'><span id="wsite-title">NexTransfer</span></a></span></td>
-					                <td id="nav-handle"><label for="nav-trigger"><span>Menu</span></label></td>
-					            </tr>
-					        </table>
-					    </div>
-					</div>
-					<div id="banner-wrap">
-					   <div class="container-box">
-					        <div id="banner">
-					            <h2><span class='wsite-text wsite-headline'>The <font><font><font color="#e0bf5c">Next</font></font></font><br />generation of<br />Money <font><font color="#e0bf5c"><span id="selectionBoundary_1421884174909_9595331067685038" class="rangySelectionBoundary" style="line-height: 0; display: none;">﻿</span><span>Transfer<br /></span><span id="selectionBoundary_1421884174909_8043603873811662" class="rangySelectionBoundary" style="line-height: 0; display: none;">﻿</span></font></font><span style=""><font size="5"><br /><span id="selectionBoundary_1421893344313_6764213619753718" class="rangySelectionBoundary" style="display: none; line-height: 0;">﻿</span>Have You Ever Imagined That You Could Transfer Money Abroad<br />Without Any Transfer Costs Or Hidden Currency Exchange Fees?<span id="selectionBoundary_1421893344313_9846068436745554" class="rangySelectionBoundary" style="line-height: 0; display: none;">﻿</span></font></span><br /><span id="selectionBoundary_1418883270148_13136345171369612" class="rangySelectionBoundary" style="line-height: 0; display: none;">﻿</span></span></h2>
-					            <div style="text-align:left;"><div style="height: 0px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-large wsite-button-highlight" href="join-us.html" >
-<span class="wsite-button-inner">Join us and save money</span>
-</a>
-<div style="height: 0px; overflow: hidden;"></div></div>
-					        </div>
-					    </div>
-					</div>
-	        <a id="landing-scroll"></a>
-				</div>
-				</div>
-				<div id="main-wrap"><div class="container-box"><div id='wsite-content' class='wsite-elements wsite-not-footer'>
-<h2 class="wsite-content-title" style="text-align:left;"><br />Did you know that banks charge an expensive hidden fee?</h2>
-
-<div class="paragraph" style="text-align:left;">People lose on average 7.9%* of the amount total sent&nbsp;<span style="font-size: 17.7777786254883px;">when transferring money abroad.</span><br /><em><font size="3">*Source:&nbsp;</font></em><font size="3"><span style="line-height: 26.6666679382324px;"><em>Remittance Prices Worldwide, The World Bank (January 2015)</em></span></font><font size="3"><span style="line-height: 26.6666679382324px;"><br /></span></font><br /><font size="3"><span style="line-height: 26.6666679382324px;"><br /></span></font><br /><font size="3"><span style="line-height: 26.6666679382324px;"><br /></span></font></div>
-
-<h2 class="wsite-content-title" style="text-align:left;">We firmly believe that this is unfair.</h2>
-
-<div class="paragraph" style="text-align:left;">It's not fair that you pay a hidden currency exchange fee on top of the mid-market currency rate, often without even knowing.<br /></div>
-
-<div style="text-align:right;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-normal" href="why-nextransfer.html" >
-<span class="wsite-button-inner">more about the Mid-market rate</span>
-</a>
-<div style="height: 10px; overflow: hidden;"></div></div>
-
-<h2 class="wsite-content-title" style="text-align:left;"><br />There is a smarter way to save your money.</h2>
-
-<div class="paragraph" style="text-align:left;"><span style="">Imagine that you could transfer money to other countries nearly for free, with full transparency and disclosure for any nominal costs.</span><br /><span style=""><br /></span></div></div>
-</div></div>
-				<div id="footer-wrap">© 2014 - 2015, NexTransfer, Inc. or its affiliates. All rights reserved.<div class="container-box"></div></div>
-       </div>
-    </div><!-- end page-content-wrapper -->
-</div><!-- end page-container -->
-
-	<!-- JavaScript -->
-	<script type="text/javascript" src="files/theme/jquery.jqtransform.js" ></script>
-	<script type="text/javascript" src="files/theme/custom.js"></script>
-	<script type="text/javascript" src="files/theme/mobile.js"></script>
+		<!-- <div class="quick_list_btn"><a href=""></a></div> -->
+	<div id="nav-icon1">
+	  <span></span>
+	  <span></span>
+	  <span></span>
+	</div>
+	<nav>
+		<ul>
+			<li><a href="">About Us</a></li>
+			<li><a href="">Why NexTransfer?</a></li>
+			<li><a href="">How It Works</a></li>
+			<li><a href="">My Page</a></li>
+			<li><a href="">Contact Us</a></li>
+		</ul>
+	</nav>
+	</header>
 	
+	<div id="color_cover"></div>
+	<div id="main_copy">
+		<h1>ONLY A DOLLAR.<br>TRANSFER COSTS NEVER SO LOW.</h1>
+		<p>Send money abroad without foreign exchange through a peer network.</p>
+	</div>
+	<section class="quick_search">
+		<h2>I would like to transfer money</h2>
+		<ul>
+			<li>
+				<div class="direction">FROM</div>
+				<select class="cs-select cs-skin-elastic">
+					<option value="" disabled selected>Select a Country</option>
+					<option value="france" data-class="flag-france">France</option>
+					<option value="brazil" data-class="flag-brazil">Brazil</option>
+					<option value="argentina" data-class="flag-argentina">Argentina</option>
+					<option value="south-africa" data-class="flag-safrica">South Africa</option>
+				</select>
+			</li>
+			<li>
+				<div class="direction">TO</div>
+				<select class="cs-select cs-skin-elastic">
+					<option value="" disabled selected>Select a Country</option>
+					<option value="france" data-class="flag-france">France</option>
+					<option value="brazil" data-class="flag-brazil">Brazil</option>
+					<option value="argentina" data-class="flag-argentina">Argentina</option>
+					<option value="south-africa" data-class="flag-safrica">South Africa</option>
+				</select>
+			</li>
+		</ul>
+		<div class="result">You have <span>67</span> transfer wish mates</div>
+		<button>Get Started</button>
+	</section>
 
+	<section class="gray why">
+		<div class="bar"><img src="img/main/bar_wht_gry.jpg" alt=""></div>
+		<div class="why">Why NexTransfer?</div>
+		<div class="content">
+			<ul>
+				<li>
+					<div class="icon"><img src="img/main/icon_01.png" alt=""></div>
+					<h2>Super Cheap</h2>
+					<p>Send money abroad up to $1,000<br> for only $1 fee without<br> additional fees. </p>
+				</li>
+				<li>
+					<div class="icon"><img src="img/main/icon_02.png" alt=""></div>
+					<h2>Peer Transfer</h2>
+					<p>Find a peer,<br> 
+					exchange the destination<br>
+					account and send money. <br>
+					See more how it works.
+					</p>
+				</li>
+				<li>
+					<div class="icon"><img src="img/main/icon_03.png" alt=""></div>
+					<h2>Transfer guarantee</h2>
+					<p>We guarantee your<br>
+					transfer transaction<br>
+					through our proprietary<br>
+					protection system.
+					</p>
+				</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</section>
+
+
+	<section class="white how_it_works">
+		<div class="bar"><img src="img/main/bar_gry_wht.jpg" alt=""></div>
+		<div class="title">How It Works</div>
+		<div class="content">
+			<div class="f_left">
+				<h1>Send money internationally without the typical cross-border costs.</h1>
+				<p>As Yyour money doesn’t does not cross the borders of any country, so you you do not don’t have to pay currency exchange fees, which is charged usually add up to X8%*  by traditional banks on average.</p>
+			</div>
+			<div class="f_right">
+				<h1>Transfer money with trustworthy people.</h1>
+				<p>People in NexTransfer are verified via their own personal details (passport, driver’s licensecs, etc.) and various social media accounts. NexTransfer, fundamentally, is a network built on trust. On top of that we assure that your money is safely to delivered to its intended a destination by holding an through multi-factor trust verification and securing credit card collateral.</p>
+			</div>
+			<div class="clear"></div>
+		</div>
+		<div class="link"><button>See How It Works</button></div>
+	</section>
+	<section class="white testimonials">
+		<div class="title">Testimonials</div>
+		<div class="content">
+			<div class="info">
+				<ul>
+					<li>
+						<div class="pic"><img src="img/main/face.png" alt=""></div>
+						<div class="name">
+							BRANDON LEE<br>
+							<span class="job">USA Engineer</span>
+						</div>
+						<div class="comment"></div>
+						<div class="clear"></div>
+					</li>
+					<li>
+						<div class="pic"><img src="img/main/face.png" alt=""></div>
+						<div class="name">
+							BRANDON LEE<br>
+							<span class="job">USA Engineer</span>
+						</div>
+						<div class="comment"></div>
+						<div class="clear"></div>
+					</li>
+					<li>
+						<div class="pic"><img src="img/main/face.png" alt=""></div>
+						<div class="name">
+							BRANDON LEE<br>
+							<span class="job">USA Engineer</span>
+						</div>
+						<div class="comment"></div>
+						<div class="clear"></div>
+					</li>
+				</ul>
+				<div class="clear"></div>
+			</div>
+			
+		</div>
+	</section>
+	<section class="white invite">
+		<div class="title">Invite your friends</div>
+		<div class="sub_title">Let your friends know the world's cheapest way to send money abroad</div>
+		<div class="content">
+			<ul>
+				<li><a href=""><img src="img/main/sns_01.png" alt=""></a></li>
+				<li><a href=""><img src="img/main/sns_02.png" alt=""></a></li>
+				<li><a href=""><img src="img/main/sns_03.png" alt=""></a></li>
+				<li><a href=""><img src="img/main/sns_04.png" alt=""></a></li>
+			</ul>
+		</div>
+	</section>
+	
+	<footer>
+		
+	</footer>
+
+	<script>
+	    $(function() {
+            var BV = new $.BigVideo();
+			BV.init();
+			if (Modernizr.touch) {
+                BV.show('img/background-dock.jpg');
+            } else {
+                BV.show('vids/video_02.mp4',{ambient:true});
+            }
+	    });
+    </script>
+    <script src="js/classie.js"></script>
+	<script src="js/selectFx.js"></script>
+	<script>
+		(function() {
+			[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el) {	
+				new SelectFx(el);
+			} );
+		})();
+	</script>
 </body>
 </html>
